fix: footer is always visible even if table is too large

--- a/src/renderer/src/App.css
+++ b/src/renderer/src/App.css
@@ -11,4 +11,5 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
+  overflow-y: auto;
 }
